# guile-toxcore

./: .dir-locals.el  .gitignore  Makefile.am  README.md  configure.ac  env.in  tox.scm
examples/: client.scm  guile-tox.sample
tox/: bindings.scm  group-chat.scm  util.scm
